trunk/Archive2/70/282a27c4e5ce30/output
main.cpp:5:5: error: expected unqualified-id before '[' token
 long[] a = {1., 1., 2., 3., 5., 8., 13., 21., 34., 55., 89., 144., 233., 377., 610., 987., 1597., 2584., 4181., 6765., 10946., 17711., 28657., 46368., 75025., 121393., 196418., 317811., 514229., 832040.};
     ^
main.cpp: In function 'int canMerge(int, int)':
main.cpp:8:29: error: 'min' was not declared in this scope
     long lowFib = min(t1, t2);
                             ^
main.cpp:8:29: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:240:5: note:   'std::min'
     min(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
main.cpp:9:30: error: 'max' was not declared in this scope
     long highFib = max(t1, t2);
                              ^
main.cpp:9:30: note: suggested alternative:
In file included from /usr/local/include/c++/4.9.0/bits/char_traits.h:39:0,
                 from /usr/local/include/c++/4.9.0/ios:40,
                 from /usr/local/include/c++/4.9.0/ostream:38,
                 from /usr/local/include/c++/4.9.0/iostream:39,
                 from main.cpp:1:
/usr/local/include/c++/4.9.0/bits/stl_algobase.h:261:5: note:   'std::max'
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
main.cpp: In function 'int sum(int, int)':
main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
main.cpp: In function 'clock_t time(int (&)(int, int))':
main.cpp:26:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
